[package]
name = "ws28xx-n-channel-spi"
description = "Simple, stripped down, educational, no_std-compatible driver for WS28XX (WS2811/12) RGB LEDs. Uses SPI device for timing/clock, and works definitely on Linux/Raspberry Pi."
version = "2.0.0"
authors = [
    "Philipp Schuster <phip1611@gmail.com>",
    "Danny Roberts <danny.roberts@york.ac.uk>",
]
edition = "2018"
keywords = ["spi", "ws2811", "ws2812", "ws2818", "neopixel"]
categories = ["hardware-support"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Danzibob/WS28xx-n-channel-spi/"
repository = "https://github.com/Danzibob/WS28xx-n-channel-spi/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rpi_ws281x", "adapter_spidev"]
adapter_spidev = ["spidev"]
rpi_ws281x = ["rs_ws281x"]

[dependencies]
rs_ws281x = { version = "0.5.1", optional = true }
spidev = { version = "0.4.1", optional = true }
